fix: mobile alignments

--- a/src/components/AssetInfo/TokenSideBar.scss
+++ b/src/components/AssetInfo/TokenSideBar.scss
@@ -12,10 +12,10 @@ $border-color: rgba($color-black, 0.1);
   right: 0;
   height: 100vh;
   width: 100%;
-  max-width: 340px;
+  max-width: 260px;
   transform: translateX(100%);
 
-  @media only screen and (min-width: 992px) {
+  @media only screen and (min-width: $md) {
     max-width: 380px;
   }
 
@@ -62,6 +62,11 @@ $border-color: rgba($color-black, 0.1);
 
   h2 {
     margin-bottom: 10px;
+    font-size: 28px;
+
+    @media only screen and (min-width: $md) {
+      font-size: 32px;
+    }
   }
 
   h4 {
@@ -120,7 +125,8 @@ $border-color: rgba($color-black, 0.1);
 }
 
 .message {
-  @include font-montserrat-semibold;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
   text-transform: uppercase;
   font-size: 14px;
 }
@@ -194,10 +200,9 @@ $border-color: rgba($color-black, 0.1);
   margin-bottom: 8px;
 
   h4 {
-    display: inline-block;
+    display: inline;
     vertical-align: middle;
     font-size: 16px;
-    margin-bottom: 0;
     margin-right: 8px;
   }
 
