--- a/src/components/HomePageContent/dropZoneSection.scss
+++ b/src/components/HomePageContent/dropZoneSection.scss
@@ -6,7 +6,6 @@ h3 {
 
 .main {
   @include l-main;
-  padding: 2rem;
   margin: auto;
 }
 
